--- a/main.css
+++ b/main.css
@@ -1428,6 +1428,7 @@ input, select, textarea {
 		.bordered-feature-image img {
 			display: block;
 			width: 100%;
+			border: solid 1px rgba(255, 255, 255, 0.35);
 		}
 
 	.button-large {
