--- a/main.css
+++ b/main.css
@@ -116,6 +116,45 @@ input, select, textarea {
 		margin-bottom: 0 !important;
 	}
 
+/* Container */
+
+	.container {
+		margin: 0 auto;
+		max-width: 100%;
+		width: 1200px;
+	}
+
+		@media screen and (max-width: 1680px) {
+
+			.container {
+				width: 1200px;
+			}
+
+		}
+
+		@media screen and (max-width: 1280px) {
+
+			.container {
+				width: calc(100% - 40px);
+			}
+
+		}
+
+		@media screen and (max-width: 980px) {
+
+			.container {
+				width: calc(100% - 50px);
+			}
+
+		}
+
+		@media screen and (max-width: 736px) {
+
+			.container {
+				width: calc(100% - 40px);
+			}
+
+		}
 
 /* Row */
 
@@ -1428,7 +1467,6 @@ input, select, textarea {
 		.bordered-feature-image img {
 			display: block;
 			width: 100%;
-			border: solid 1px rgba(255, 255, 255, 0.35);
 		}
 
 	.button-large {
